<resources>
    <string name="app_name">NaviSDK</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC5R4Lvngu6XG68v8HuNxxq8Zn0wGLZV4U</string>

    <string name="map_page_title">大樓地圖</string>
    <string name="map_page_check_list">查看列表</string>
    <string name="map_page_start_navi">開始導航</string>
    <string name="map_page_stop_navi">結束導航</string>
    <string name="map_page_auto_navi">模擬導航</string>
    <string name="map_page_route_plan">路徑規劃</string>
    <string name="map_page_priority_normal">一般路徑</string>
    <string name="map_page_priority_elevator">無障礙路徑</string>
    <string name="map_page_instructions_current_floor">所在樓層</string>
    <string name="map_page_instructions_destination">導引目的地</string>
    <string name="map_page_instructions_user_location">重新定位</string>
    <string name="map_page_instructions_floor_select">選擇樓層</string>
    <string name="map_page_instructions_help">操作教學</string>
    <string name="map_page_instructions_indoor_location">室內模式</string>
    <string name="map_page_instructions_outdoor_location">室外模式</string>
    <string name="dialog_title_hint">提示</string>
    <string name="dialog_button_ok_text">好</string>
    <string name="dialog_button_no_text">否</string>
    <string name="error_dialog_title_text_no_network">無連接網路</string>
    <string name="error_dialog_message_text_no_network">請檢查網路連線</string>
    <string name="error_dialog_title_text_unknown">發生未預期錯誤</string>
    <string name="error_dialog_title_text_json_parse_error">發生未預期的錯誤</string>
    <string name="dialog_message_network_connect_not_good">此處無可供服務流量之網路，請移動至適當區域，檢查連線狀況後再試。</string>
    <string name="error_dialog_title_text_normal">請注意</string>
    <string name="dialog_message_route_empty">取得路徑錯誤</string>
    <string name="dialog_message_arrive_destination">您已抵達目的地</string>
    <string name="drawer_content_pager_title_store">店家</string>
    <string name="drawer_content_pager_title_restaurant">餐廳</string>
    <string name="drawer_content_pager_title_theater">劇場</string>
    <string name="drawer_content_pager_title_facility">服務設施</string>
    <string name="drawer_content_pager_error_msg_no_data">無 POI 資訊</string>
    <string name="action_bar_text_back">上一頁</string>
    <string name="search">搜尋</string>
    <string name="search_keyword">請輸入查詢關鍵字</string>
    <string name="without_sensor_hint">由於您的手機未具備室內定位所需硬體元件(加速度感測器及陀螺儀)，App無法取得目前準確位置。建議使用具備加速度感測器及陀螺儀的手機，以順利使用各項功能。</string>
    <string name="string_select_here">選擇位置</string>

    <string name="activity_home_title">臺北市政大樓導航</string>
    <string name="activity_home_map">進入地圖</string>
    <string name="activity_home_theme">主題導覽</string>
    <string name="activity_home_friend">找朋友</string>
    <string name="activity_home_classify_search">分類查詢</string>
    <string name="activity_home_quick_guide">快速導引</string>
    <string name="activity_home_department_search">局處查詢</string>
    <string name="activity_home_meeting_room">找會議室</string>
    <string name="activity_home_search">查 詢</string>
    <string name="string_navi">導 覽</string>
    <string name="activity_home_qrcode">掃描QRcode</string>
    <string name="activity_home_phone">撥打市民熱線</string>
    <string name="activity_home_service_center">服務台</string>
    <string name="activity_home_toilet">廁所</string>
    <string name="activity_home_aed">AED</string>
    <string name="activity_home_fire_extinguisher">滅火器</string>
    <string name="activity_home_elevator">電梯</string>
    <string name="activity_home_exit">逃生出口</string>
    <string name="activity_home_guide_title">主題導覽</string>
    <string name="activity_home_guide_point_number">包含 %d 個地點</string>

    <string name="input_error_required">此欄位必填</string>
    <string name="join_group_sucessfully">加入成功</string>
    <string name="join_group_fail">加入失敗</string>
    <string name="quit">退出</string>
    <string name="group_key">群組金鑰：</string>
    <string name="reward_has_collected">獎勵已領取</string>
    <string name="cancel">取消</string>
    <string name="sure">確定</string>
    <string name="sure1">確認</string>
    <string name="create_group_meeting_place">建立集合點</string>
    <string name="warning">警告提示</string>
    <string name="leave_group_disband_text">創建者一旦離開群組，將解散群組。\n確認是否離開？</string>
    <string name="leave_group_warning_text">一旦離開群組，將無法觀看該群組好友位置，必須重新加入。</string>
    <string name="string_group_creator_info">群組資料</string>
    <string name="dialog_hint_create_group_name_title">姓名</string>
    <string name="dialog_hint_create_group_meeting_time">集合時間</string>
    <string name="dialog_hint_create_group_meeting_place">集合地點</string>
    <string name="dialog_hint_create_group_meeting_place_default">選擇地點</string>
    <string name="dialog_hint_create_group_meeting_notice">提醒時間</string>
    <string name="dialog_hint_create_group_meeting_notice_hint">分鐘前</string>
    <string name="dialog_join_group_input_key">群組金鑰</string>
    <string name="dialog_error_msg_duplicate_device_id">您之前已加入此群組</string>
    <string name="dialog_btn_text_leave_group">離開群組</string>
    <string name="string_meeting_function">集合功能</string>
    <string name="string_select_please">請選擇</string>
    <string name="string_field_required">為必填欄位</string>
    <string name="string_user_name">您的姓名</string>
    <string name="string_group_name">群組名稱</string>
    <string name="string_your_phone">您的手機</string>
    <string name="dialog_hint_create_group_tel">輸入格式為 09XX-XXX-XXX</string>
    <string name="dialog_hint_create_group_title">請輸入您的群組名稱，限10字以內</string>
    <string name="dialog_hint_create_group_name">請輸入您的姓名</string>
    <string name="string_you">本人</string>
    <string name="string_member">成員</string>
    <string name="reset">重新設定</string>
    <string name="leave_group_disband_by_creator_text">您加入的群組已解散。</string>
    <string name="zh_text_limit">中文上限10字</string>
    <string name="eng_text_limit">英文上限20字</string>
    <string name="input_error_wrong_email_format">信箱格式錯誤</string>
    <string name="input_error_wrong_phone_number_format">電話格式錯誤</string>
    <string name="button_copy_group_key">複 製</string>
    <string name="group_key_is">群組金鑰</string>
    <string name="string_copy_key_done">複製成功</string>
    <string name="group_intro_start_title1">透過該功能提供快速獲得朋友位置並提供集合功能。</string>
    <string name="group_intro_start_title">開始使用尋找好友</string>
    <string name="group_intro_start_hint_one">1.點選「創建群組」，創建您的群組</string>
    <string name="group_intro_start_hint_two">2.輸入您的名稱、群組名稱、聯絡電話、集合地點、集合時間及提醒時間。 註1：創建者可以修改集合地點、集合時間與提醒時間。 註2：集合時間為開館時間至閉館時間，為當下時間間隔十分鐘進行設定。</string>
    <string name="group_intro_start_hint_three">3.完成創建，提供金鑰給您的朋友「加入群組」。</string>
    <string name="group_intro_join_title">使用加入群組</string>
    <string name="group_intro_join_hint_one">1.點選「加入群組」。</string>
    <string name="group_intro_group_list_title">群組清單</string>
    <string name="group_intro_group_list_hint_one">點擊任一成員，可至地圖查看朋友位置。</string>
    <string name="group_intro_join_hint_two">2.輸入您的名稱、金鑰即完成加入。</string>
    <string name="group_intro_group_name">參觀小組</string>
    <string name="group_intro_group_member_a">成員A</string>
    <string name="group_intro_group_member_b">成員B</string>
    <string name="group_intro_group_member_c">成員C</string>
    <string name="intro_do_not_show_again">不再顯示</string>
    <string name="home_page_option_group_location_intro">尋找好友使用說明</string>
    <string name="none">無</string>
    <string name="string_find_friend_setting_changed_notification">尋找朋友變更提醒</string>
    <string name="string_cancel_meeting_function">取消集合</string>
    <string name="group_disband_text">群組 \&#034;%1$s\&#034; 已解散。</string>
    <string name="notify_channel_name_meeting">集合提醒</string>
    <string name="string_notice">提醒</string>
    <string name="setting_success">設定成功</string>
    <string name="string_edit_phone">編輯電話</string>
    <string name="string_phone_updated">電話已更新</string>
    <string name="input_help_optional">選填</string>
    <string name="string_group_join_member_info">您的資料</string>
    <string name="customize_notice">自訂提醒</string>
    <string name="notify_channel_name_customize_event">自訂提醒</string>
    <string name="dialog_hint_create_group_hour">群組有效時間(1~8小時)</string>
    <string name="group_page_no_group">OOPS ! 您尚未建立群組</string>
    <string name="group_page_create_group">創建群組</string>
    <string name="group_page_join_group">加入群組</string>
    <string name="fragment_navi_menu_find_friend">找朋友</string>
    <string name="dialog_hint_create_group_success_title">群組名稱</string>
    <string name="dialog_btn_text_create_group">建立群組</string>
    <string name="dialog_btn_text_create_group_success_complete">完 成</string>
    <string name="dialog_btn_text_join_group_join">加 入</string>
    <string name="dialog_msg_leave_group">請問是否離開群組？</string>
    <string name="dialog_error_msg_invalid_name">群組內已有相同名稱，請修正後再加入</string>
    <string name="dialog_hint_create_group_success_key">加入金鑰</string>
    <string name="dialog_error_msg_invalid_group">此群組不存在</string>
    <string name="error_code_timeout">連線錯誤，請稍後再試。</string>
    <string name="home_page_option_group_location">好友位置</string>
    <string name="dialog_hint_join_group_input_key">請輸入群組金鑰</string>
    <string name="action_bar_title_group_members">群組成員</string>
    <string name="string_edit">編輯</string>
</resources>
