<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nurFormContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#CC504A4D">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:weightSum="6"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/round_cornor_white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rec_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/reward_has_collected"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/rec_dialog_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/reward_has_collected"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_weight="3"
                android:visibility="gone"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c64d4d4d"
            android:paddingTop="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/rw_collect_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#007aff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rw_collect_ok_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="#007aff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c64d4d4d"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>



</LinearLayout>